# final_414_ccds

./: Makefile  README.md  pyproject.toml
414_final/: __init__.py  dataset.py  features.py  plots.py
414_final/modeling/: predict.py  train.py
data copy/: Cleaned_Data.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: analysis.ipynb  eda.ipynb
