[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "414_final"
version = "0.0.1"
description = "Final project for 414 project using the GSS data."
authors = [
  { name = "Brynn Saffer" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["414_final"]
include = ["pyproject.toml", "414_final/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["414_final"]
force-sort-within-sections = true

